<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.result.activity.ResultActivity">

    <ImageView
        android:id="@+id/bg_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/pic_bg" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.scwang.smart.refresh.header.MaterialHeader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/HomeCard"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_page" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_datas"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/layout_cons"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                style="@style/HomeCard"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_data"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_cons"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@id/rv_datas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/HomeCard"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button1_create_data"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintVertical_weight="2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/button2_todo"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/create_data"
                    android:textSize="11sp"
                    app:cornerRadius="10dp" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2_todo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintVertical_weight="2"
                    app:layout_constraintTop_toBottomOf="@id/button1_create_data"
                    app:layout_constraintBottom_toTopOf="@id/tv_miss_name"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/todo"
                    android:textSize="11sp"
                    app:cornerRadius="10dp" />
                <TextView
                    android:id="@+id/tv_miss_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintVertical_weight="1"
                    app:layout_constraintTop_toBottomOf="@id/button2_todo"
                    app:layout_constraintBottom_toTopOf="@id/tv_missing_page_rate"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/missing_page_rate"/>
                <TextView
                    android:id="@+id/tv_missing_page_rate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintVertical_weight="3"
                    app:layout_constraintTop_toBottomOf="@id/tv_miss_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/orange"
                    android:text="@string/missing_page_rate"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>